# ChangeLog for app-misc/gallery-remote
# Copyright 1999-2004 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-misc/gallery-remote/ChangeLog,v 1.3 2004/09/02 10:28:49 axxo Exp $

*gallery-remote-1.4.1 (02 Sep 2004)

  02 Sep 2004; Thomas Matthijs <axxo@gentoo.org> metadata.xml,
  +files/1.4.1.patch, +gallery-remote-1.4.1.ebuild:
  version bump

  30 Jul 2004; Thomas Matthijs <axxo@gentoo.org> gallery-remote-1.3.2.ebuild:
  fix description

*gallery-remote-1.3.2 (30 Jul 2004)

  30 Jul 2004; Thomas Matthijs <axxo@gentoo.org> +metadata.xml,
  +files/1.3.2.patch, +files/build.xml.patch, +gallery-remote-1.3.2.ebuild:
  initial import
