@@ -1,6 +1,9 @@
 # ChangeLog for dev-java/metadata-extractor
 # Copyright 1999-2004 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-java/metadata-extractor/ChangeLog,v 1.2 2004/08/03 11:42:50 dholm Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-java/metadata-extractor/ChangeLog,v 1.3 2004/09/21 13:34:46 axxo Exp $
+
+  21 Sep 2004; Thomas Matthijs <axxo@gentoo.org> :
+  x86
 
   03 Aug 2004; David Holm <dholm@gentoo.org> metadata-extractor-2.2.2.ebuild:
   Added to ~ppc.
