@@ -1,6 +1,10 @@
 # ChangeLog for app-misc/gallery-remote
 # Copyright 1999-2004 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-misc/gallery-remote/ChangeLog,v 1.3 2004/09/02 10:28:49 axxo Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-misc/gallery-remote/ChangeLog,v 1.4 2004/09/21 13:35:11 axxo Exp $
+
+  21 Sep 2004; Thomas Matthijs <axxo@gentoo.org> gallery-remote-1.3.2.ebuild,
+  gallery-remote-1.4.1.ebuild:
+  x86
 
 *gallery-remote-1.4.1 (02 Sep 2004)
 
